feat: Google Analytics with Partytown integration

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,6 +9,7 @@ const {
 
 import Header from '../components/header.astro';
 import Footer from '../components/footer.astro';
+import GoogleAnalytics from '../components/GoogleAnalytics.astro';
 
 
 ---
@@ -59,6 +60,7 @@ import Footer from '../components/footer.astro';
     <!-- Android用 -->
     <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192" />
 	<link rel="stylesheet" href="/css/style.css">
+    <GoogleAnalytics />
 	</head>
 
 	<body class="l-bg">
