--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,7 +43,7 @@ import GoogleAnalytics from '../components/GoogleAnalytics.astro';
         property="og:description"
         content={description ?? '広島県小児科医会のホームページです。'}
     />
-    <meta property="og:image" content="/ogp.png" />
+    <meta property="og:image" content="https://blog.hiroshima-ped.com/ogp.png" />
     <meta property="og:site_name" content="広島県小児科医会" />
     <meta property="og:locale" content="ja_JP" />
 
@@ -57,10 +57,10 @@ import GoogleAnalytics from '../components/GoogleAnalytics.astro';
     <link rel="icon" type="image/png" sizes="16x16" href="/icon-16x16.png" />
 
     <!-- iOS用 -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180" />
+    <link rel="apple-touch-icon" href="https://blog.hiroshima-ped.com/apple-touch-icon-180x180.png" sizes="180x180" />
 
     <!-- Android用 -->
-    <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192" />
+    <link rel="icon" type="image/png" href="https://blog.hiroshima-ped.com/android-chrome-192x192.png" sizes="192x192" />
 	<link rel="stylesheet" href="/css/style.css">
     <GoogleAnalytics />
 	</head>
