--- a/src/pages/about/message.astro
+++ b/src/pages/about/message.astro
@@ -50,7 +50,7 @@ const keywords = "広島県小児科医会, 広島, 広島県, 小児科, 小児
                 広島県小児科医会の事業にご指導、ご協力を賜りますようにお願い申し上げます。
             </p>
             <p>
-                広島県小児科医会会長<span class="c-message-sign">森 美喜夫</span><br>
+                広島県小児科医会会長<span class="c-message-sign">西村 真一郎</span><br>
                 2023年1月記
             </p>
         </div>
