--- a/public/css/style.css
+++ b/public/css/style.css
@@ -970,7 +970,6 @@ footer
   color: #07135B;
 }
 .c-footer__lower {
-  display: none;
   margin-top: 4rem;
 }
 .c-footer__lower-title {
@@ -2298,6 +2297,161 @@ thanks
     opacity: 1;
   }
 }
+/**********************************************************************
+archive
+**********************************************************************/
+.c-allergy {
+  margin-top: 3rem;
+}
+.c-allergy__text p {
+  line-height: 1.6;
+}
+.c-allergy__text p a {
+  text-decoration: underline;
+}
+.c-allergy__text p:nth-child(n+2) {
+  margin-top: 1rem;
+}
+.c-allergy__pdfs {
+  margin-top: 2rem;
+}
+.c-allergy__pdf {
+  margin-top: 2rem;
+}
+.c-allergy__pdf span {
+  display: block;
+  margin-bottom: 1em;
+}
+
+.c-kokoro__ttl {
+  margin-top: 2rem;
+  font-weight: normal;
+}
+.c-kokoro__text {
+  margin-top: 1.5rem;
+}
+.c-kokoro__text p {
+  line-height: 1.6;
+}
+.c-kokoro__text p:nth-child(n+2) {
+  margin-top: 1rem;
+}
+.c-kokoro__text--sign {
+  text-align: right;
+}
+.c-kokoro-qa {
+  margin-top: 1.5rem;
+}
+.c-kokoro-qa ul {
+  line-height: 1.6;
+}
+.c-kokoro-qa ul:nth-child(n+2) {
+  margin-top: 1rem;
+}
+.c-kokoro-qa--q span {
+  color: #d32f2f;
+}
+.c-kokoro-qa--a {
+  margin-top: 0.5rem;
+  text-indent: -1em;
+  margin-left: 1em;
+}
+.c-kokoro-qa--a span {
+  color: #5BA9D9;
+}
+.c-kokoro-facility {
+  margin-top: 1.5rem;
+}
+.c-kokoro-facility__item {
+  width: 100%;
+  height: 100%;
+  border-top: 0.1rem solid #333333;
+  line-height: 1.6;
+}
+.c-kokoro-facility__item:last-child {
+  border-bottom: 0.1rem solid #333333;
+}
+.c-kokoro-facility__item tr {
+  display: grid;
+  grid-template-columns: 10% 85%;
+  gap: 0 5%;
+  align-items: start;
+  justify-content: center;
+}
+@media screen and (max-width: 768px) {
+  .c-kokoro-facility__item tr {
+    justify-content: start;
+    grid-template-columns: inherit;
+    grid-template-rows: auto 1fr;
+    gap: 2% 0;
+  }
+}
+.c-kokoro-facility__item tr:first-child {
+  margin-top: 1rem;
+}
+.c-kokoro-facility__item tr:last-child {
+  margin-bottom: 1rem;
+}
+.c-kokoro-facility__item th {
+  text-align: center;
+  font-weight: normal;
+}
+@media screen and (max-width: 768px) {
+  .c-kokoro-facility__item th {
+    -moz-text-align-last: left;
+         text-align-last: left;
+  }
+}
+.c-kokoro-facility__item td a {
+  text-decoration: underline;
+  overflow-wrap: anywhere;
+}
+.c-kokoro__doctor {
+  margin-top: 1.5rem;
+}
+.c-kokoro__doctor p {
+  line-height: 1.6;
+}
+.c-kokoro__doctor p:nth-child(n+2) {
+  margin-top: 0.5rem;
+}
+.c-kokoro__doctor-item {
+  margin-top: 1rem;
+  padding: 1rem 2rem 0;
+}
+.c-kokoro__doctor-item a {
+  text-decoration: underline;
+}
+.c-kokoro__doctor-item:nth-child(n+2) {
+  border-top: 0.1rem solid #333333;
+}
+.c-kokoro__doctor-item:last-child {
+  padding-bottom: 1rem;
+  border-bottom: 0.1rem solid #333333;
+}
+
+.c-breastfeeding__text {
+  line-height: 1.6;
+  margin-top: 2rem;
+}
+.c-breastfeeding__item {
+  margin-top: 2rem;
+  padding: 2rem 2rem 0;
+  border-top: 0.1rem solid #333333;
+}
+.c-breastfeeding__item p {
+  line-height: 1.6;
+}
+@media screen and (max-width: 768px) {
+  .c-breastfeeding__item {
+    padding: 2rem 1rem 0;
+  }
+}
+.c-breastfeeding__item:last-child {
+  padding-bottom: 2rem;
+  border-bottom: 0.1rem solid #333333;
+}
+
 /**********************************************************************
 font
 **********************************************************************/
