--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -85,9 +85,6 @@
                         <a href="https://news.web.nhk/newsweb/na/na-k10013213651000" target="_blank">子どもの新型コロナ感染対策（NHK, 2021.8.20）</a>
                     </li>
                     <li class="c-footer__link">
-                        <a href="http://hiroshima-ped.com/KidsCovid/KidsCovid202006.pdf" target="_blank">全国の新型コロナ発生状況（10歳未満・10代）一覧</a>
-                    </li>
-                    <li class="c-footer__link">
                         <a href="https://www.small-baby.jp/rsvirus/trend.html" target="_blank">RSウイルス全国の流行状況</a>
                     </li>
                     <li class="c-footer__link">
@@ -105,10 +102,10 @@
                         <a href="https://alle-net.com/family/allergy/allergy07/" target="_blank">食物アレルギーヒヤリハット事例集</a>
                     </li>
                     <li class="c-footer__link">
-                        <a href="http://hiroshima-ped.com/220801anaphylaxis2.htm" target="_blank">アレルギー対策委員会</a>
+                        <a href="/archive/allergy" target="_blank">アレルギー対策委員会</a>
                     </li>
                     <li class="c-footer__link">
-                        <a href="http://hiroshima-ped.com/SIDS201010.pdf" target="_blank">SIDSから赤ちゃんを守りましょう</a>
+                        <a href="/src/assets/pdfs/SIDS.pdf" target="_blank">SIDSから赤ちゃんを守りましょう</a>
                     </li>
                     <li class="c-footer__link">
                         <a href="https://www.mhlw.go.jp/content/11908000/000846941.pdf" target="_blank">SIDS診断の手引き</a>
@@ -125,7 +122,7 @@
                         <a href="https://www.pref.hiroshima.lg.jp/soshiki/62/1245372748537.html" target="_blank">発達障害啓発パンフレット</a>
                     </li>
                     <li class="c-footer__link">
-                        <a href="http://hiroshima-ped.com/kokoro/kaisatu.html" target="_blank">子どもの心相談医専門医療機関一覧</a>
+                        <a href="/archive/kokoro" target="_blank">子どもの心相談医専門医</a>
                     </li>
                 </ul>
                 <ul class="c-footer__links">
@@ -136,7 +133,7 @@
                         <a href="https://www.pref.hiroshima.lg.jp/soshiki/248/ikuseiiryou.html" target="_blank">自立支援医療（育成医療）の申請について（広島県）</a>
                     </li>
                     <li class="c-footer__link">
-                        <a href="" target="_blank">生涯教育シリーズ 母乳保育</a>
+                        <a href="/archive/breastfeeding" target="_blank">生涯教育シリーズ 母乳保育</a>
                     </li>
                 </ul>
             </div>
