--- a/src/pages/archive/allergy.astro
+++ b/src/pages/archive/allergy.astro
@@ -11,8 +11,8 @@ const keywords = "広島県小児科医会, 広島県, 広島, 小児科医, 小
 
 
 //画像
-import home from '../../assets/image/アレルギー緊急時対応マニュアル（家庭版）.png'
-import school from '../../assets/image/アレルギー緊急時対応マニュアル.png'
+import home from '../../assets/image/allergy_manual_home.png'
+import school from '../../assets/image/allergy_manual.png'
 
 
 ---
