--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -102,7 +102,7 @@
                         <a href="https://alle-net.com/family/allergy/allergy07/" target="_blank">食物アレルギーヒヤリハット事例集</a>
                     </li>
                     <li class="c-footer__link">
-                        <a href="/archive/allergy" target="_blank">アレルギー対策委員会</a>
+                        <a href="/archive/allergy">アレルギー対策委員会</a>
                     </li>
                     <li class="c-footer__link">
                         <a href="/src/assets/pdfs/SIDS.pdf" target="_blank">SIDSから赤ちゃんを守りましょう</a>
@@ -122,7 +122,7 @@
                         <a href="https://www.pref.hiroshima.lg.jp/soshiki/62/1245372748537.html" target="_blank">発達障害啓発パンフレット</a>
                     </li>
                     <li class="c-footer__link">
-                        <a href="/archive/kokoro" target="_blank">子どもの心相談医専門医</a>
+                        <a href="/archive/kokoro">子どもの心相談医専門医</a>
                     </li>
                 </ul>
                 <ul class="c-footer__links">
@@ -133,7 +133,7 @@
                         <a href="https://www.pref.hiroshima.lg.jp/soshiki/248/ikuseiiryou.html" target="_blank">自立支援医療（育成医療）の申請について（広島県）</a>
                     </li>
                     <li class="c-footer__link">
-                        <a href="/archive/breastfeeding" target="_blank">生涯教育シリーズ 母乳保育</a>
+                        <a href="/archive/breastfeeding">生涯教育シリーズ 母乳保育</a>
                     </li>
                 </ul>
             </div>
