--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -105,7 +105,7 @@
                         <a href="/archive/allergy">アレルギー対策委員会</a>
                     </li>
                     <li class="c-footer__link">
-                        <a href="/src/assets/pdfs/SIDS.pdf" target="_blank">SIDSから赤ちゃんを守りましょう</a>
+                        <a href="/pdfs/SIDS.pdf" target="_blank">SIDSから赤ちゃんを守りましょう</a>
                     </li>
                     <li class="c-footer__link">
                         <a href="https://www.mhlw.go.jp/content/11908000/000846941.pdf" target="_blank">SIDS診断の手引き</a>
