--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2384,6 +2384,7 @@ archive
     grid-template-columns: inherit;
     grid-template-rows: auto 1fr;
     gap: 2% 0;
+    padding: 0 1rem;
   }
 }
 .c-kokoro-facility__item tr:first-child {
@@ -2418,6 +2419,11 @@ archive
 .c-kokoro__doctor-item {
   margin-top: 1rem;
   padding: 1rem 2rem 0;
+}
+@media screen and (max-width: 768px) {
+  .c-kokoro__doctor-item {
+    padding: 1rem 1rem 0;
+  }
 }
 .c-kokoro__doctor-item a {
   text-decoration: underline;
