--- a/sass/object/_component.scss
+++ b/sass/object/_component.scss
@@ -1719,6 +1719,7 @@ archive
                     grid-template-columns: inherit;
                     grid-template-rows: auto 1fr;
                     gap: 2% 0;
+                    padding: 0 1rem;
                 }
                 &:first-child {
                     margin-top: 1rem;
@@ -1753,6 +1754,9 @@ archive
         &-item {
             margin-top: 1rem;
             padding: 1rem 2rem 0;
+            @include mq("md") {
+                padding: 1rem 1rem 0;
+            }
             a {
                 text-decoration: underline;
             }
