--- a/src/pages/archive/allergy.astro
+++ b/src/pages/archive/allergy.astro
@@ -53,13 +53,13 @@ import school from '../../assets/image/allergy_manual.png'
             </div>
             <div class="c-allergy__pdfs">
                 <div class="c-allergy__pdf">
-                    <a href="/src/assets/pdfs/アレルギー緊急時対応マニュアル（家庭版）.pdf" target="_blank">
+                    <a href="/pdfs/アレルギー緊急時対応マニュアル（家庭版）.pdf" target="_blank">
                         <span>◯家庭での対応用</span>
                         <Image src={home} alt="アレルギー緊急時対応マニュアル（家庭版）.png" />
                     </a>
                 </div>
                 <div class="c-allergy__pdf">
-                    <a href="/src/assets/pdfs/アレルギー緊急時対応マニュアル.pdf" target="_blank">
+                    <a href="/pdfs/アレルギー緊急時対応マニュアル.pdf" target="_blank">
                         <span>◯学校での対応用</span>
                         <Image src={school} alt="アレルギー緊急時対応マニュアル.png" />
                     </a>
