--- a/src/pages/archive/breastfeeding.astro
+++ b/src/pages/archive/breastfeeding.astro
@@ -45,7 +45,7 @@ const keywords = "広島県小児科医会, 広島県, 広島, 小児科医, 小
                     母乳は必ず出る、ヒトの子は母乳で
                 </p>
                 <div class="c-news__btn-wrap">
-                    <a class="c-news__btn" href="/src/assets/pdfs/母乳保育（その1）.pdf" target="_blank">
+                    <a class="c-news__btn" href="/pdfs/母乳保育（その1）.pdf" target="_blank">
                         ダウンロードする<span class="c-news__btn-arrow"></span>
                     </a>
                 </div>
@@ -55,7 +55,7 @@ const keywords = "広島県小児科医会, 広島県, 広島, 小児科医, 小
                     牛乳の科学で使われる述語
                 </p>
                 <div class="c-news__btn-wrap">
-                    <a class="c-news__btn" href="/src/assets/pdfs/母乳保育（その2）.pdf" target="_blank">
+                    <a class="c-news__btn" href="/pdfs/母乳保育（その2）.pdf" target="_blank">
                         ダウンロードする<span class="c-news__btn-arrow"></span>
                     </a>
                 </div>
@@ -65,7 +65,7 @@ const keywords = "広島県小児科医会, 広島県, 広島, 小児科医, 小
                     ラクトフェリンなど乳清蛋白質の役割と意義
                 </p>
                 <div class="c-news__btn-wrap">
-                    <a class="c-news__btn" href="/src/assets/pdfs/母乳保育（その3）.pdf" target="_blank">
+                    <a class="c-news__btn" href="/pdfs/母乳保育（その3）.pdf" target="_blank">
                         ダウンロードする<span class="c-news__btn-arrow"></span>
                     </a>
                 </div>
@@ -75,7 +75,7 @@ const keywords = "広島県小児科医会, 広島県, 広島, 小児科医, 小
                     母乳はどのくらいでるものかがわからぬ理由 乳糖など糖質の代謝を考える
                 </p>
                 <div class="c-news__btn-wrap">
-                    <a class="c-news__btn" href="/src/assets/pdfs/母乳保育（その4）.pdf" target="_blank">
+                    <a class="c-news__btn" href="/pdfs/母乳保育（その4）.pdf" target="_blank">
                         ダウンロードする<span class="c-news__btn-arrow"></span>
                     </a>
                 </div>
@@ -85,7 +85,7 @@ const keywords = "広島県小児科医会, 広島県, 広島, 小児科医, 小
                     離乳食（solid）について（1）わが国の調理形態主義は時代遅れ
                 </p>
                 <div class="c-news__btn-wrap">
-                    <a class="c-news__btn" href="/src/assets/pdfs/母乳保育（その5）.pdf" target="_blank">
+                    <a class="c-news__btn" href="/pdfs/母乳保育（その5）.pdf" target="_blank">
                         ダウンロードする<span class="c-news__btn-arrow"></span>
                     </a>
                 </div>
@@ -95,7 +95,7 @@ const keywords = "広島県小児科医会, 広島県, 広島, 小児科医, 小
                     離乳食（solid）について（2）complementaryとweaningの違い
                 </p>
                 <div class="c-news__btn-wrap">
-                    <a class="c-news__btn" href="/src/assets/pdfs/母乳保育（その6）.pdf" target="_blank">
+                    <a class="c-news__btn" href="/pdfs/母乳保育（その6）.pdf" target="_blank">
                         ダウンロードする<span class="c-news__btn-arrow"></span>
                     </a>
                 </div>
